--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,27 @@
 #donation {
 	margin-right: 32px;
 }
+
+.content {
+	flex-direction: column;
+	justify-content: center;
+}
+
+.content > button {
+	position: absolute;
+	bottom: 0;
+}
+
+#description {
+	position: absolute;
+	width: 380px;
+	right: -200px;
+	background: linear-gradient(90deg, #141e30, transparent);
+	padding: 10px;
+	border-radius: 0.3rem;
+}
+
+.dialog {
+	margin: 0;
+	left: auto;
+}
