--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-#donation {
-	margin-right: 32px;
-}
-
 .content {
 	flex-direction: column;
 	justify-content: center;
@@ -41,4 +37,16 @@
 
 #description .body {
 	margin-top: 0.5em;
+}
+
+#wheel-data-sets #scrooge + label {
+	margin-right: 32px;
+}
+
+#wheel-data-sets * {
+	vertical-align: baseline;
+}
+
+#volume-control {
+	vertical-align: middle;
 }
